fix: correção do espaçamento do button visibility da tela login

--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -21,6 +21,10 @@ h1 {
     text-align: center;
 }
 
+.visibility-button{
+  margin: auto;
+}
+
 button {
   margin-top: 1.5rem;
 }
